feat: add chat configs
